refactor repositories: change from using List to Map